--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mmm-teath-timer",
   "version": "1.0.0",
-  "description": "[Module description]",
+  "description": "[A timer to brush your teeth for 3 minutes]",
   "main": "MMM-Template.js",
   "scripts": {
     "lint": "eslint .",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+[GitHub url].git"
+    "url": "git+[https://github.com/KKayss/MMM-Teeth-Timer].git"
   },
   "keywords": [
     "template"
@@ -18,9 +18,9 @@
   "author": "[Thibault Martin]",
   "license": "MIT",
   "bugs": {
-    "url": "[GitHub url]/issues"
+    "url": "[https://github.com/KKayss/MMM-Teeth-Timer]/issues"
   },
-  "homepage": "[GitHub url]#readme",
+  "homepage": "[https://github.com/KKayss/MMM-Teeth-Timer]#readme",
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@stylistic/eslint-plugin": "^2.7.2",
